File Explorer, fix a css issue where a lot of extra spaces were being taken by the file elements in the grid

--- a/ShiftBlazor/wwwroot/main.css
+++ b/ShiftBlazor/wwwroot/main.css
@@ -202,6 +202,7 @@ th.mud-table-cell.sticky-left, th.mud-table-cell.sticky-right {
         gap: 10px;
         padding: 20px;
         height: 100%;
+        align-content: start;
     }
 
     .file-explorer .file-listing.small {
